# novel_killer

./: .env  .env.example  .gitignore  Makefile  PROJECT_SUMMARY.md  PROJECT_SUMMARY_SHORT.md  README.md  README_EN.md  diagnose.py  load_env.sh  pyproject.toml  requirements.txt  run.sh  test_beta.py  test_pipeline.py
agents/: NovelOps_v2_详细开发流程.md
bible/: 01_PROJECT_BIBLE.md  01_characters.md  02_WORLD_RULES.md  03_CHARACTER_BIBLE.md  03_style_guide.md  04_forbidden_rules.md  05_CHAPTER_PRODUCTION_SPEC.md  07_STYLE_AND_TONE.md  09_CONTINUITY_TRACKER.md  11_REVIEW_CHECKLIST.md  12_DAILY_PRODUCTION_WORKFLOW.md
chapters/: 01 我看见她只剩三分钟可活.md  02 救下她后，我少了一年寿命.md  03 室友头顶的负数财运.md  04 第一桶金差点变成第一场骗局.md  06 不是车祸，是他的女儿.md  07 遗憾值九十一.md  09 三分钟，我又看见了三分钟.md  11 白塔人生咨询.md  13 余额来源不明.md  14 你是不是一直在看我的命.md  23 黑线尽头是她.md  24 她的厄运开始加速.md  25 七十二小时死亡回环.md  26 已注销的咨询中心.md  29 陈远山.md  30 我的寿命，只剩三十天.md  31 父亲的锁定.md  37 最后的准备.md  40 对决.md  41 新的开始.md  46 余波.md  47 最后的威胁.md
config/: models.example.json  novelops.example.json  workflow.example.json
configs/: models.example.json  novelops.example.json  platforms.example.json
deploy/: DEPLOYMENT.md  backup.sh  config  nginx.conf  novelops.service
docs/: acceptance_checklist.md  changelog.md  feature_guide.md  gap_analysis.md  implementation_summary.md  quickstart.md  readme_en.md  storage.md
novelops/: __init__.py  cli.py  config.py  continuity.py  corpus.py  dotenv_loader.py  generator.py  indexer.py  llm.py  paths.py  planner.py  project.py  publisher.py  readiness.py  reviewer.py  scoring.py  session.py  web.py
scripts/: run.sh  (+6 more)
(+392 files in other folders)
